--- a/frontend/src/app/components/employee/employee.component.html
+++ b/frontend/src/app/components/employee/employee.component.html
@@ -3,6 +3,7 @@
     <div class="card">
       <div class="card-body">
         <form #employeeForm="ngForm" (ngSubmit)="addEmployee(employeeForm)">
+          <input type="hidden" name="_id" [(ngModel)]="employeeService.selectedEmployee._id">
           <div class="form-group">
             <input
               type="text"
@@ -37,8 +38,9 @@
           </div>
 
           <button
-            class="btn btn-primary mr-2">
-            Clear
+            class="btn btn-primary mr-2"
+            (click)="resetForm(employeeForm)"
+          >Clear
           </button>
           <button
             class="btn btn-secondary">
@@ -68,6 +70,7 @@
         <td>
           <button
             class="btn btn-secondary btn-sm"
+            (click)="editEmployee(employee)"
           ><i class="material-icons">edit</i></button>
           <button
             class="btn btn-danger btn-sm"
