--- a/frontend/src/app/components/employee/employee.component.html
+++ b/frontend/src/app/components/employee/employee.component.html
@@ -10,7 +10,7 @@
               class="form-control"
               placeholder="Enter your name"
               name="name"
-              [(ngModel)]="employeeService.selectedEmployee.name">
+              [ngModel]="employeeService.selectedEmployee.name">
           </div>
           <div class="form-group">
             <input
@@ -18,7 +18,7 @@
               class="form-control"
               placeholder="Enter your office"
               name="office"
-              [(ngModel)]="employeeService.selectedEmployee.office">
+              [ngModel]="employeeService.selectedEmployee.office">
           </div>
           <div class="form-group">
             <input
@@ -26,7 +26,7 @@
               class="form-control"
               placeholder="Enter your position"
               name="position"
-              [(ngModel)]="employeeService.selectedEmployee.position">
+              [ngModel]="employeeService.selectedEmployee.position">
           </div>
           <div class="form-group">
             <input
@@ -34,7 +34,7 @@
               class="form-control"
               placeholder="Enter your salary"
               name="salary"
-              [(ngModel)]="employeeService.selectedEmployee.salary">
+              [ngModel]="employeeService.selectedEmployee.salary">
           </div>
 
           <button
